# ros-voice-assistant

./: README.md  requirements.txt
assistant_interfaces/: CMakeLists.txt  package.xml
voice_assistant/: package.xml  setup.cfg  setup.py
voice_assistant/launch/: voice_assistant.launch.py
voice_assistant/voice_assistant/: mic_node.py  nlp_node.py  speaker_node.py
