<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>voice_assistant</name>
  <version>1.0.0</version>
  <description>Voice assistant for ROS 2</description>
  <maintainer email="victorcarvesk@gmail.com">Victor Carvesk</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>assistant_interfaces</depend>

  <exec_depend>portaudio19-dev</exec_depend>
  
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
